# TAOCP

1/2/9/generating-function/: main.go
3/2/1/1/: a.out  main.s
3/3/1/: a.out  chi-sqare.s
5/1/1/inversions/: main.go
7/1/1/30/: .main.s.swp  Makefile  a.out  data  main  main.s  unmarshell.s
7/1/1/30.2/: a.out  main.s
7/1/1/DNF/: .dnf.s.swp  Makefile  dnf.s  main  main.s
7/1/1/all-functions/: a.out  main.s
7/1/1/associativity/: a.out  main.s
7/1/1/horn/: a.out  input  main.c  main.s
7/1/1/logical-operations/: a.out  main.s
7/1/1/truthtable/: a.out  main.s
7/1/2/1/: main.ml
MAC/: b  hello.mmo  hello.mms
bin_editor/: a.out  data  main  main.c
c_mix/: constants.c  constants.h  instruction.c  instruction.h  main  main.c  makefile  memory.c  memory.h  run.c  run.h  save
go_mix/: go.mod
go_mix/machine/: main.go
go_mix/machine/memory/: memory.go  memory_test.go  registers.go
go_mix/machine/word/: word.go  word_test.go
notes/: RandomNumbers.ipynb
notes/1.2.3/: main.jl
notes/1.2.5/: main.jl
notes/1.2/1/: main.jl
ocaml_mix/: .ocamlinit
ocaml_mix/_build/: .db  .digest-db  log
ocaml_mix/_build/default/: META.mix  mix.dune-package  mix.install
ocaml_mix/src/: dune  interp.ml  lexer.mll
permutations/: main.cu
random/chi_squared/: a.out  main.c
random/chi_squared/2/: a.out  main.cpp
random/generators/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tutorial.cxx
random/generators/MathFunctions/: Makefile  MathFunctions.h  cmake_install.cmake  mysqrt.cxx
random/kolmogoroz_smirnov/: a.out  main.cpp
(+84 files in other folders)
